k8s/deployment_api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: web
spec:
  replicas: 2
  selector: { matchLabels: { app: app } }
  template:
    metadata: { labels: { app: app } }
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: app
          image: ghcr.io/udito/football-analytics:main
          ports: [{ containerPort: 8000 }]
          readinessProbe:
            httpGet: { path: /api, port: 8000 }
            initialDelaySeconds: 5
          livenessProbe:
            httpGet: { path: /api/health, port: 8000 }
            initialDelaySeconds: 15
