k8s/serivce_streamlit.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamlit-svc
  namespace: web
spec:
  selector: { app: streamlit }
  ports: [{ port: 8501, targetPort: 8501 }]
