k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ing
  namespace: web
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: app-svc
                port: { number: 8000 }
          - path: /
            pathType: Prefix
            backend:
              service:
                name: streamlit-svc
                port: { number: 8501 }
